fixed sidemenu mobile spacing

--- a/mysite/assets/scss/modules/sidemenu/_main.scss
+++ b/mysite/assets/scss/modules/sidemenu/_main.scss
@@ -62,11 +62,10 @@ $program-title-width: 150px;
 
 
 .sidemenu {
-  top: $mobile-header-height;
+/*  top: $mobile-header-height;*/
   position: relative;
   background-color: palette-get(na-black);
   width: 100%;
-  
 
  /* height:100%;*/
   /*padding-top: 15px;
